{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 58,
  "lineage": "630b129d-584b-d63a-5c84-d33a9e3af9a5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:security-group/sg-0aece852860afc4e5",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0aece852860afc4e5",
            "ingress": [],
            "name": "attendanceTracker-cluster-20220502052019013000000008",
            "name_prefix": "attendanceTracker-cluster-",
            "owner_id": "366252322890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "attendanceTracker-cluster"
            },
            "tags_all": {
              "Name": "attendanceTracker-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:security-group/sg-00abe9b4476c3aaef",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-00abe9b4476c3aaef",
            "ingress": [],
            "name": "attendanceTracker-node-20220502052019115900000009",
            "name_prefix": "attendanceTracker-node-",
            "owner_id": "366252322890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "attendanceTracker-node",
              "kubernetes.io/cluster/attendanceTracker": "owned"
            },
            "tags_all": {
              "Name": "attendanceTracker-node",
              "kubernetes.io/cluster/attendanceTracker": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3797995546",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aece852860afc4e5",
            "self": false,
            "source_security_group_id": "sg-00abe9b4476c3aaef",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-609175842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aece852860afc4e5",
            "self": false,
            "source_security_group_id": "sg-00abe9b4476c3aaef",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3294979600",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aece852860afc4e5",
            "self": false,
            "source_security_group_id": "sg-00abe9b4476c3aaef",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4153556106",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": false,
            "source_security_group_id": "sg-0aece852860afc4e5",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-2219741282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1536208252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-621709425",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2715041719",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-800308689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1423138771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": false,
            "source_security_group_id": "sg-0aece852860afc4e5",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1374072641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": false,
            "source_security_group_id": "sg-0aece852860afc4e5",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1816202666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3357453893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00abe9b4476c3aaef",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"eks_nodes\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:security-group/sg-00954a06cfb342680",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-00954a06cfb342680",
            "ingress": [],
            "name": "eks_nodes-eks-node-group-2022050205201912170000000a",
            "name_prefix": "eks_nodes-eks-node-group-",
            "owner_id": "366252322890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_nodes-eks-node-group"
            },
            "tags_all": {
              "Name": "eks_nodes-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mod_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a8e78b90cd54155",
            "domain": "vpc",
            "id": "eipalloc-04a8e78b90cd54155",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-186-109.compute-1.amazonaws.com",
            "public_ip": "3.234.186.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e897b9cd28b97b0",
            "domain": "vpc",
            "id": "eipalloc-01e897b9cd28b97b0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-212-79.compute-1.amazonaws.com",
            "public_ip": "34.193.212.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:internet-gateway/igw-02b67e836297ef79b",
            "id": "igw-02b67e836297ef79b",
            "owner_id": "366252322890",
            "tags": {
              "Name": "vpc",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "vpc",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a8e78b90cd54155",
            "connectivity_type": "public",
            "id": "nat-0aec9cb4a7fb33e3d",
            "network_interface_id": "eni-0879f9942f659f5f3",
            "private_ip": "10.20.33.24",
            "public_ip": "3.234.186.109",
            "subnet_id": "subnet-0a71e0a02b57cab2f",
            "tags": {
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e897b9cd28b97b0",
            "connectivity_type": "public",
            "id": "nat-0abc571206c2fdeba",
            "network_interface_id": "eni-01151028f0f9d038f",
            "private_ip": "10.20.44.92",
            "public_ip": "34.193.212.79",
            "subnet_id": "subnet-03c9f27f90783053e",
            "tags": {
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf0eb5d7ba5f7f481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aec9cb4a7fb33e3d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf0eb5d7ba5f7f48",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b27404342a7b92dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0abc571206c2fdeba",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b27404342a7b92dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b67e836297ef79b",
            "id": "r-rtb-021aa8095441eed221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021aa8095441eed22",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:route-table/rtb-0bf0eb5d7ba5f7f48",
            "id": "rtb-0bf0eb5d7ba5f7f48",
            "owner_id": "366252322890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "private_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:route-table/rtb-0b27404342a7b92dc",
            "id": "rtb-0b27404342a7b92dc",
            "owner_id": "366252322890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "private_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:route-table/rtb-021aa8095441eed22",
            "id": "rtb-021aa8095441eed22",
            "owner_id": "366252322890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "public",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080efbe6f70ff7f0a",
            "route_table_id": "rtb-0bf0eb5d7ba5f7f48",
            "subnet_id": "subnet-0ef651f5bef72c167"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0429503d5782c1ea1",
            "route_table_id": "rtb-0b27404342a7b92dc",
            "subnet_id": "subnet-057ee4069c0cef380"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c60c91747eeb8ff0",
            "route_table_id": "rtb-0bf0eb5d7ba5f7f48",
            "subnet_id": "subnet-02fb541e5d920ddbd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b83d6557b25cb288",
            "route_table_id": "rtb-0b27404342a7b92dc",
            "subnet_id": "subnet-0fc89ddf3eb2384a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_working",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0265856f704d908cf",
            "route_table_id": "rtb-0bf0eb5d7ba5f7f48",
            "subnet_id": "subnet-0ae505ee9c004f8fd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9d84c0d8b38b2c5",
            "route_table_id": "rtb-0b27404342a7b92dc",
            "subnet_id": "subnet-0dd2ca80153913e1d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fea9665bccc20c77",
            "route_table_id": "rtb-021aa8095441eed22",
            "subnet_id": "subnet-0a71e0a02b57cab2f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5d29524d2310e61",
            "route_table_id": "rtb-021aa8095441eed22",
            "subnet_id": "subnet-03c9f27f90783053e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:subnet/subnet-0ef651f5bef72c167",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef651f5bef72c167",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366252322890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "admin_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "admin_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:subnet/subnet-057ee4069c0cef380",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057ee4069c0cef380",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366252322890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "admin_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "admin_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:subnet/subnet-02fb541e5d920ddbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.64.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fb541e5d920ddbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366252322890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_prod_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "private_prod_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:subnet/subnet-0fc89ddf3eb2384a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.72.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc89ddf3eb2384a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366252322890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_prod_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "private_prod_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_working",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:subnet/subnet-0ae505ee9c004f8fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.96.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae505ee9c004f8fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366252322890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_working_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "private_working_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:subnet/subnet-0dd2ca80153913e1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.104.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd2ca80153913e1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366252322890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_working_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "private_working_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:subnet/subnet-0a71e0a02b57cab2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.32.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a71e0a02b57cab2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366252322890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "public_az1",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:subnet/subnet-03c9f27f90783053e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.40.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c9f27f90783053e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366252322890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "public_az2",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "vpc_id": "vpc-037f43f6ab5dee740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366252322890:vpc/vpc-037f43f6ab5dee740",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-00d3d410acd309dca",
            "default_route_table_id": "rtb-0f47d2522fde0b04f",
            "default_security_group_id": "sg-052cfe6a1957cfb5d",
            "dhcp_options_id": "dopt-070881c90bbe0f7f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-037f43f6ab5dee740",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f47d2522fde0b04f",
            "owner_id": "366252322890",
            "tags": {
              "Name": "vpc",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            },
            "tags_all": {
              "Name": "vpc",
              "purpose": "eks",
              "resource_name": "attendanceTracker"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}